Fix position of fake radio so it's not cut off

--- a/src/app/assets/stylesheets/shared.css.scss
+++ b/src/app/assets/stylesheets/shared.css.scss
@@ -236,7 +236,7 @@ ul.sessionsList {
   margin-bottom: -1.8em;
   float: left;
   position: relative;
-  left: -2.4em;
+  left: -2.2em;
   top: 0.1em;
 
   color: transparent;  // Text is for accessibility only
